# job-scout

./: .claudeignore  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/analysis/: debug.md  explain.md  find.md  impact.md  map-repo.md  map.md  search.md  trace.md  where.md  why.md
.claude/commands/docs/: adr.md  changelog.md  doc-repo.md  doc.md  env.md  index.md
.claude/commands/feature/: add.md  extend.md  implement.md  integrate.md  new-module.md  plan.md  scaffold.md
.claude/commands/git/: amend.md  branch.md  commit.md  merge.md  pr.md  release.md  squash.md  status.md  undo.md
.claude/commands/quality/: cleanup.md  dedupe.md  deps.md  fix.md  migrate.md  profile.md  refactor-module.md  refactor-repo.md  refactor.md  rename.md  review.md  security.md  ship.md  simplify.md  standardize.md  type-fix.md
.claude/commands/test/: coverage.md  edge.md  generate.md  reproduce.md
.claude/hooks/: read_once.py
.github/workflows/: ci.yml
.vibegen/: session.json
src/job_scout/: __init__.py  cli.py  company_research.py  company_review.py  config.py  cover_letter_generator.py  cv_parser.py  cv_profile.py  database.py  evaluator.py  exporter.py  interview_prep.py  linkedin_import.py  mcp_server.py  models.py  notifier.py  official_source.py  pruner.py  resume_tailor.py  salary.py  scheduler.py  scraper.py  title_filter.py  title_screener.py  travel.py  websearch.py
src/job_scout/llm/: __init__.py  base.py  claude_cli.py  factory.py  (+4 more)
tests/: __init__.py  conftest.py  helpers.py  test_cli.py  test_company_research.py  test_company_review.py  test_concurrency.py  test_config.py  test_cover_letter_generator.py  test_custom_sites.py  test_cv_parser.py  test_cv_profile.py  test_database.py  test_evaluator.py  test_exporter.py  test_full_rerun.py  test_interview_prep.py  test_kilo_cli_client.py  test_linkedin_import.py  test_llm_factory.py  test_llm_local.py  test_mcp_server.py  test_models.py  test_multiuser_config.py  test_notifier.py  test_notify.py  test_official_source.py  test_pruner.py  test_resume_tailor.py  test_retry.py  test_salary.py  test_scheduler.py  test_scraper.py  test_title_filter.py  test_title_screener.py  test_travel.py  test_web_app.py  test_zai_client.py
(+12 files in other folders)
